# resume-mcp

./: .coverage  .env.example  .gitignore  .gitmodules  README.md  check_latex_server.sh  debug_server.py  inspect.sh  main.py  pyproject.toml  run_llm_tests.sh  run_real_api_tests.sh  run_tests.sh
docs/: latex_server_architecture.md
resume_mcp/: __init__.py  config.py  server.py
resume_mcp/mcp/: __init__.py  base.py
resume_mcp/mcp/prompts/: __init__.py  career_guidance.py  resume_tailoring.py
resume_mcp/mcp/resources/: __init__.py  obsidian.py  resources.py
resume_mcp/mcp/tools/: __init__.py  cv.py  latex.py  management.py  management_tools.py  obsidian.py  validation.py  validation_tools.py  vault.py
resume_mcp/utils/: __init__.py  cv.py  latex.py  llm.py  obsidian.py  prompt_manager.py  prompt_templates.py  resume_manager.py  vault.py
templates/: baseline_resume.md  latex_template.tex  prompt_template.md
tests/: test_cv.py  test_latex.py  test_llm.py  test_managers.py  test_managers_pytest.py  test_obsidian.py  test_vault.py
tests/test_data/: test_cv.tex
tests/test_output/: test_error_handling.tex
